--- a/guitar-story/src/css/Settings.css
+++ b/guitar-story/src/css/Settings.css
@@ -7,14 +7,15 @@
 .settings-content {
   padding: 2rem;
   border-radius: 16px;
-  background: rgba(40, 44, 84, 0.85);
+  background: rgb(34, 44, 155);
   box-shadow: 0 0 40px 5px #23234b;
   margin: 2rem auto;
   max-width: 700px;
+  opacity: 1;
 }
 .settings-content h1 {
   font-size: 2.5rem;
-  color: #a18cd1;
+  color: #c0acef;
   text-shadow: 0 0 10px #a18cd1, 0 0 20px #fbc2eb;
 }
 .settings-content p {
