--- a/guitar-story/src/css/Settings.css
+++ b/guitar-story/src/css/Settings.css
@@ -11,6 +11,7 @@
   box-shadow: 0 0 40px 5px #23234b;
   margin: 2rem auto;
   max-width: 700px;
+  justify-content: center;
   opacity: 1;
 }
 .settings-content h1 {
@@ -62,7 +63,13 @@
   color: #e0e6f7;
   font-size: 1rem;
 }
-
+.cosmic-profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-self: center;
+  margin-top: 2rem;
+}
 body.light-mode {
   background: linear-gradient(120deg, #fbc2eb 0%, #a6c1ee 100%);
   color: #23234b;
